Fix spacing on ingredients list

--- a/cocktail-app/src/App.css
+++ b/cocktail-app/src/App.css
@@ -1,5 +1,27 @@
 body {
   background: #80ced6;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container--header {
+  margin-bottom: 2em;
+}
+
+.container--header__title {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+}
+.container--ingredients {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 .pad-left {
@@ -8,4 +30,8 @@ body {
 
 .input--ingredientAmount {
   width: 2em;
+}
+
+.span--amount {
+  width: 6em;
 }
